--- a/config/optional/block.block.bcbb_messages.yml
+++ b/config/optional/block.block.bcbb_messages.yml
@@ -4,9 +4,9 @@ dependencies:
   module:
     - system
   theme:
-    - bcbb
+    - bcbb_theme
 id: bcbb_messages
-theme: bcbb
+theme: bcbb_theme
 region: content
 weight: -7
 provider: null
