--- a/config/optional/block.block.bcbb_search_form.yml
+++ b/config/optional/block.block.bcbb_search_form.yml
@@ -4,9 +4,9 @@ dependencies:
   module:
     - search
   theme:
-    - bcbb
+    - bcbb_theme
 id: bcbb_search_form
-theme: bcbb
+theme: bcbb_theme
 region: nav_additional
 weight: 0
 provider: null
