--- a/config/optional/block.block.bcbb_branding.yml
+++ b/config/optional/block.block.bcbb_branding.yml
@@ -4,9 +4,9 @@ dependencies:
   module:
     - system
   theme:
-    - bcbb
+    - bcbb_theme
 id: bcbb_branding
-theme: bcbb
+theme: bcbb_theme
 region: nav_branding
 weight: -6
 provider: null
