--- a/config/optional/block.block.bcbb_content.yml
+++ b/config/optional/block.block.bcbb_content.yml
@@ -4,9 +4,9 @@ dependencies:
   module:
     - system
   theme:
-    - bcbb
+    - bcbb_theme
 id: bcbb_content
-theme: bcbb
+theme: bcbb_theme
 region: content
 weight: -1
 provider: null
