--- a/config/optional/block.block.bcbb_local_tasks.yml
+++ b/config/optional/block.block.bcbb_local_tasks.yml
@@ -2,9 +2,9 @@ langcode: en
 status: true
 dependencies:
   theme:
-    - bcbb
+    - bcbb_theme
 id: bcbb_local_tasks
-theme: bcbb
+theme: bcbb_theme
 region: content
 weight: -4
 provider: null
