Complete renaming the theme (#1)
Completes work started in f41bab9.

Co-authored-by: Liam Morland <liam@openplus.ca>

--- a/config/optional/block.block.bcbb_theme_breadcrumbs.yml
+++ b/config/optional/block.block.bcbb_theme_breadcrumbs.yml
@@ -5,7 +5,7 @@ dependencies:
     - system
   theme:
     - bcbb_theme
-id: bcbb_breadcrumbs
+id: bcbb_theme_breadcrumbs
 theme: bcbb_theme
 region: breadcrumb
 weight: 0
