--- a/bcbb_theme.breakpoints.yml
+++ b/bcbb_theme.breakpoints.yml
@@ -1,89 +1,89 @@
-bcbb.screen.xs-max:
+bcbb_theme.screen.xs-max:
   label: xs-max
   mediaQuery: '(max-width: 575.98px)'
   weight: 1
-  group: bcbb.screen
+  group: bcbb_theme.screen
   multipliers:
     - 1x
     - 2x
 
-bcbb.screen.sm-min:
+bcbb_theme.screen.sm-min:
   label: sm-min
   mediaQuery: '(min-width: 576px)'
   weight: 2
-  group: bcbb.screen
+  group: bcbb_theme.screen
   multipliers:
     - 1x
     - 2x
 
-bcbb.screen.sm-max:
+bcbb_theme.screen.sm-max:
   label: sm-max
   mediaQuery: '(max-width: 767.98px)'
   weight: 3
-  group: bcbb.screen
+  group: bcbb_theme.screen
   multipliers:
     - 1x
     - 2x
 
-bcbb.screen.md-min:
+bcbb_theme.screen.md-min:
   label: md-min
   mediaQuery: '(min-width: 768px)'
   weight: 4
-  group: bcbb.screen
+  group: bcbb_theme.screen
   multipliers:
     - 1x
     - 2x
 
-bcbb.screen.md-max:
+bcbb_theme.screen.md-max:
   label: md-max
   mediaQuery: '(max-width: 991.98px)'
   weight: 5
-  group: bcbb.screen
+  group: bcbb_theme.screen
   multipliers:
     - 1x
     - 2x
 
-bcbb.screen.lg-min:
+bcbb_theme.screen.lg-min:
   label: lg-min
   mediaQuery: '(min-width: 992px)'
   weight: 6
-  group: bcbb.screen
+  group: bcbb_theme.screen
   multipliers:
     - 1x
     - 2x
 
-bcbb.screen.lg-max:
+bcbb_theme.screen.lg-max:
   label: lg-max
   mediaQuery: '(max-width: 1199.98px)'
   weight: 7
-  group: bcbb.screen
+  group: bcbb_theme.screen
   multipliers:
     - 1x
     - 2x
 
-bcbb.screen.xl-min:
+bcbb_theme.screen.xl-min:
   label: xl-min
   mediaQuery: '(min-width: 1200px)'
   weight: 8
-  group: bcbb.screen
+  group: bcbb_theme.screen
   multipliers:
     - 1x
     - 2x
 
-bcbb.screen.xl-max:
+bcbb_theme.screen.xl-max:
   label: xl-max
   mediaQuery: '(max-width: 1399.98px)'
   weight: 9
-  group: bcbb.screen
+  group: bcbb_theme.screen
   multipliers:
     - 1x
     - 2x
 
-bcbb.screen.xxl-min:
+bcbb_theme.screen.xxl-min:
   label: xxl-min
   mediaQuery: '(min-width: 1400px)'
   weight: 10
-  group: bcbb.screen
+  group: bcbb_theme.screen
   multipliers:
     - 1x
     - 2x
