--- a/config/optional/block.block.bcbb_theme_account_menu.yml
+++ b/config/optional/block.block.bcbb_theme_account_menu.yml
@@ -2,23 +2,23 @@ langcode: en
 status: true
 dependencies:
   config:
-    - system.menu.main
+    - system.menu.account
   module:
     - system
   theme:
     - bcbb_theme
-id: bcbb_main_navigation
+id: bcbb_theme_account_menu
 theme: bcbb_theme
-region: nav_main
-weight: 0
+region: nav_additional
+weight: -7
 provider: null
-plugin: 'system_menu_block:main'
+plugin: 'system_menu_block:account'
 settings:
-  id: 'system_menu_block:main'
-  label: 'Main navigation'
+  id: 'system_menu_block:account'
+  label: 'User account menu'
   provider: system
   label_display: '0'
   level: 1
   depth: 0
-  expand_all_items: true
+  expand_all_items: false
 visibility: {  }
