--- a/config/optional/block.block.bcbb_theme_branding.yml
+++ b/config/optional/block.block.bcbb_theme_branding.yml
@@ -5,7 +5,7 @@ dependencies:
     - system
   theme:
     - bcbb_theme
-id: bcbb_branding
+id: bcbb_theme_branding
 theme: bcbb_theme
 region: nav_branding
 weight: -6
