--- a/config/optional/block.block.bcbb_theme_content.yml
+++ b/config/optional/block.block.bcbb_theme_content.yml
@@ -5,7 +5,7 @@ dependencies:
     - system
   theme:
     - bcbb_theme
-id: bcbb_content
+id: bcbb_theme_content
 theme: bcbb_theme
 region: content
 weight: -1
