--- a/config/optional/block.block.bcbb_theme_footer.yml
+++ b/config/optional/block.block.bcbb_theme_footer.yml
@@ -1,19 +1,24 @@
 langcode: en
 status: true
 dependencies:
+  config:
+    - system.menu.footer
   module:
     - system
   theme:
     - bcbb_theme
-id: bcbb_powered_by_drupal
+id: bcbb_theme_footer
 theme: bcbb_theme
 region: footer
-weight: 0
+weight: -6
 provider: null
-plugin: system_powered_by_block
+plugin: 'system_menu_block:footer'
 settings:
-  id: system_powered_by_block
-  label: 'Powered by Drupal'
+  id: 'system_menu_block:footer'
+  label: Footer
   provider: system
   label_display: '0'
+  level: 1
+  depth: 0
+  expand_all_items: false
 visibility: {  }
