--- a/config/optional/block.block.bcbb_theme_help.yml
+++ b/config/optional/block.block.bcbb_theme_help.yml
@@ -1,19 +1,19 @@
 langcode: en
 status: true
 dependencies:
+  module:
+    - help
   theme:
     - bcbb_theme
-id: bcbb_local_tasks
+id: bcbb_theme_help
 theme: bcbb_theme
 region: content
-weight: -4
+weight: -3
 provider: null
-plugin: local_tasks_block
+plugin: help_block
 settings:
-  id: local_tasks_block
-  label: Tabs
-  provider: core
+  id: help_block
+  label: Help
+  provider: help
   label_display: '0'
-  primary: true
-  secondary: true
 visibility: {  }
