--- a/config/optional/block.block.bcbb_theme_messages.yml
+++ b/config/optional/block.block.bcbb_theme_messages.yml
@@ -2,18 +2,18 @@ langcode: en
 status: true
 dependencies:
   module:
-    - help
+    - system
   theme:
     - bcbb_theme
-id: bcbb_help
+id: bcbb_theme_messages
 theme: bcbb_theme
 region: content
-weight: -3
+weight: -7
 provider: null
-plugin: help_block
+plugin: system_messages_block
 settings:
-  id: help_block
-  label: Help
-  provider: help
+  id: system_messages_block
+  label: Messages
+  provider: system
   label_display: '0'
 visibility: {  }
