--- a/config/optional/block.block.bcbb_theme_powered_by_drupal.yml
+++ b/config/optional/block.block.bcbb_theme_powered_by_drupal.yml
@@ -1,24 +1,19 @@
 langcode: en
 status: true
 dependencies:
-  config:
-    - system.menu.footer
   module:
     - system
   theme:
     - bcbb_theme
-id: bcbb_footer
+id: bcbb_theme_powered_by_drupal
 theme: bcbb_theme
 region: footer
-weight: -6
+weight: 0
 provider: null
-plugin: 'system_menu_block:footer'
+plugin: system_powered_by_block
 settings:
-  id: 'system_menu_block:footer'
-  label: Footer
+  id: system_powered_by_block
+  label: 'Powered by Drupal'
   provider: system
   label_display: '0'
-  level: 1
-  depth: 0
-  expand_all_items: false
 visibility: {  }
